tests/invalid/Parsing_Invalid_26.whiley
type Record is {
     int x,
     void y
}